minio-console-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"operator.min.io/authors":"MinIO, Inc.","operator.min.io/license":"AGPLv3","operator.min.io/support":"https://subnet.min.io"},"labels":{"name":"console"},"name":"console","namespace":"minio-operator"},"spec":{"ports":[{"name":"http","port":9090},{"name":"https","port":9443}],"selector":{"app":"console"}}}
    operator.min.io/authors: MinIO, Inc.
    operator.min.io/license: AGPLv3
    operator.min.io/support: https://subnet.min.io
  creationTimestamp: "2021-12-07T10:14:14Z"
  labels:
    name: console
  name: console
  namespace: minio-operator
  resourceVersion: "10379"
  selfLink: /api/v1/namespaces/minio-operator/services/console
  uid: b62b2e9b-2e88-4411-a5ee-9b1ef8e41bfb
spec:
  clusterIP: 10.0.77.7
  ports:
  - name: http
    port: 9090
    protocol: TCP
    targetPort: 9090
  - name: https
    port: 9443
    protocol: TCP
    targetPort: 9443
  selector:
    app: console
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
