minio-console.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"operator.min.io/authors":"MinIO, Inc.","operator.min.io/license":"AGPLv3","operator.min.io/support":"https://subnet.min.io"},"name":"console","namespace":"minio-operator"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"console"}},"template":{"metadata":{"annotations":{"operator.min.io/authors":"MinIO, Inc.","operator.min.io/license":"AGPLv3","operator.min.io/support":"https://subnet.min.io"},"labels":{"app":"co [...]
    operator.min.io/authors: MinIO, Inc.
    operator.min.io/license: AGPLv3
    operator.min.io/support: https://subnet.min.io
  creationTimestamp: "2021-12-07T10:14:15Z"
  generation: 1
  name: console
  namespace: minio-operator
  resourceVersion: "10479"
  selfLink: /apis/apps/v1/namespaces/minio-operator/deployments/console
  uid: c652939e-83d7-44df-b99e-32315ddc05da
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: console
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        operator.min.io/authors: MinIO, Inc.
        operator.min.io/license: AGPLv3
        operator.min.io/support: https://subnet.min.io
      creationTimestamp: null
      labels:
        app: console
    spec:
      containers:
      - args:
        - server
        env:
        - name: CONSOLE_OPERATOR_MODE
          value: "on"
        image: minio/console:v0.12.3
        imagePullPolicy: IfNotPresent
        name: console
        ports:
        - containerPort: 9090
          name: http
          protocol: TCP
        - containerPort: 9433
          name: https
          protocol: TCP
        resources: {}
        securityContext:
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: console-sa
      serviceAccountName: console-sa
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2021-12-07T10:14:34Z"
    lastUpdateTime: "2021-12-07T10:14:34Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2021-12-07T10:14:15Z"
    lastUpdateTime: "2021-12-07T10:14:34Z"
    message: ReplicaSet "console-c8d5595dd" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
