minio-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"operator.min.io/authors":"MinIO, Inc.","operator.min.io/license":"AGPLv3","operator.min.io/support":"https://subnet.min.io"},"name":"minio-operator","namespace":"minio-operator"},"spec":{"replicas":2,"selector":{"matchLabels":{"name":"minio-operator"}},"template":{"metadata":{"annotations":{"operator.min.io/authors":"MinIO, Inc.","operator.min.io/license":"AGPLv3","operator.min.io/support":"https://subnet.min.io"},"lab [...]
    operator.min.io/authors: MinIO, Inc.
    operator.min.io/license: AGPLv3
    operator.min.io/support: https://subnet.min.io
  creationTimestamp: "2021-12-07T10:14:13Z"
  generation: 1
  name: minio-operator
  namespace: minio-operator
  resourceVersion: "10448"
  selfLink: /apis/apps/v1/namespaces/minio-operator/deployments/minio-operator
  uid: 338c3660-7691-4f01-93b6-d980aafeee07
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: minio-operator
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        operator.min.io/authors: MinIO, Inc.
        operator.min.io/license: AGPLv3
        operator.min.io/support: https://subnet.min.io
      creationTimestamp: null
      labels:
        name: minio-operator
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - minio-operator
            topologyKey: kubernetes.io/hostname
      containers:
      - env:
        - name: CLUSTER_DOMAIN
          value: cluster.local
        image: minio/operator:v4.3.5
        imagePullPolicy: IfNotPresent
        name: minio-operator
        resources:
          requests:
            cpu: 200m
            ephemeral-storage: 500Mi
            memory: 256Mi
        securityContext:
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: minio-operator
      serviceAccountName: minio-operator
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2021-12-07T10:14:25Z"
    lastUpdateTime: "2021-12-07T10:14:25Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2021-12-07T10:14:13Z"
    lastUpdateTime: "2021-12-07T10:14:25Z"
    message: ReplicaSet "minio-operator-77587bf654" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
