minioingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/tls-acme":"true","nginx.ingress.kubernetes.io/proxy-body-size":"1024m"},"name":"minioingress","namespace":"minio-operator"},"spec":{"ingressClassName":"nginx","rules":[{"http":{"paths":[{"backend":{"serviceName":"console","servicePort":"http"},"path":"/"}]}}]}}
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
  creationTimestamp: "2021-12-07T10:25:13Z"
  generation: 2
  name: minioingress
  namespace: minio-operator
  resourceVersion: "12512"
  selfLink: /apis/extensions/v1beta1/namespaces/minio-operator/ingresses/minioingress
  uid: 673c9272-60e6-4625-b504-669bc0fe5cc6
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          serviceName: console
          servicePort: http
        path: /
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - ip: 20.62.242.35
